--- a/css/style.css
+++ b/css/style.css
@@ -99,11 +99,12 @@ a {
 	font-weight: 600;
 	color: hsl(var(--primary));
 	text-decoration: none;
+	transition: all 300ms ease-in-out;
 }
 
 a:hover {
 	color: hsl(var(--foreground));
-	border-bottom: 2px solid hsl(var(--primary));
+	text-decoration-line: underline;
 }
 
 img {
@@ -132,14 +133,16 @@ header {
 	width: fit-content;
 	padding: 1.5rem 3rem;
 	border-radius: var(--radius);
-}
-
-.btn-primary:hover {
-	border-bottom: none;
+	display: flex;
+	gap: 1rem;
+	align-items: center;
+	transition: all 300ms ease-in-out;
+	border: none;
+	cursor: pointer;
 }
 
 section > * {
-	margin-top: 3rem;
+	margin-top: 5rem;
 }
 
 section h2 {
@@ -183,11 +186,56 @@ section h2 {
 .project-link a {
 	font-size: 1rem;
 	color: hsl(var(--muted-foreground));
+	display: flex;
+	gap: 1rem;
+	align-items: center;
+	width: fit-content;
+}
+
+.contact-form {
+	margin-top: 5rem;
+	display: flex;
+	flex-direction: column;
+	gap: 1rem;
+}
+
+.input {
+	padding: 1rem;
+	border: 2px solid hsl(var(--muted));
+	border-radius: var(--radius);
+	font-family: "Hind", sans-serif;
+	font-size: 1rem;
+	font-weight: 600;
+	width: 60%;
+	margin: 0 auto;
+}
+
+input[type="submit"] {
+	background-color: hsl(var(--primary));
+	color: hsl(var(--primary-foreground));
+	font-family: "Outfit", sans-serif;
+	font-size: 1.5rem;
+	font-weight: 700;
+	width: fit-content;
+	padding: 1.5rem 3rem;
+	border-radius: var(--radius);
+	display: flex;
+	gap: 1rem;
+	align-items: center;
+	transition: all 300ms ease-in-out;
+	border: none;
+	cursor: pointer;
+	margin: 0 auto;
+}
+
+input[type="submit"]:hover {
+	background-color: hsl(var(--foreground));
+	color: hsl(var(--primary));
 }
 
 .contact-title {
 	text-align: center;
-	margin: 0 auto;
+	margin: 5rem auto;
 }
 
 .contact-links {
